[package]
name = "lama_rts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0"
once_cell = "1.16.0"
rust-i18n = "1.1.0"
bevy_mod_picking = "0.12"
bevy_mod_raycast = "0.6" 
bevy_text_mesh = "0.4.0"
serde_json = "1.0"
serde = "1.0"
rand = "0.8.5"